Projet_GL/src/test/deca/context/valid/unprovided/testObjet/fields/declFieldNoInit.deca
// Description:
//   Définition d'une classe avec 2 champs non initialisés
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A{

      protected int x;
      float y;
}